# TaurusAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  opencode.jsonc  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  main.py  routes_alerts.py  routes_data.py  routes_fundamentals.py  routes_graph.py  routes_health.py  routes_intelligence.py  routes_kite_auth.py  routes_paper.py  routes_replay.py  routes_research.py  routes_risk.py  routes_runs.py  routes_ui.py
docs/: KITE_INTEGRATION_PLAN.md  TAURUS_CODEX_PROMPTS_v0_3.md  TAURUS_CODEX_TASKS_v0_3.yaml  TAURUS_COMMANDS.md  TAURUS_DATA_INTEGRATION.md  TAURUS_GRAPH_INTELLIGENCE_PLAN.md  TAURUS_MILESTONE_TODO.md  TAURUS_MOCK_MIGRATION_STATUS.md  TAURUS_MVP_RELEASE.md  TAURUS_MVP_SPEC_v0_3.md  TAURUS_OPERATIONS_RUNBOOK.md  TAURUS_REACT_DASHBOARD_PLAN.md  TAURUS_UI_DESIGN_BRIEF.md  TAURUS_USAGE_GUIDE.md  UPSTOX_INTEGRATION_PLAN.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.txt  .graphify_chunk_02.txt  .graphify_chunk_03.txt  .graphify_chunk_04.txt  .graphify_chunk_05.txt  .graphify_chunk_06.txt  .graphify_chunk_07.txt  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: README.md  alert_smoke.py  backup_local.py  import_kite_candles.py  import_mock_news.py  import_price_csv.py  import_screener.py  import_taurus_graph.py  kite_auth.py  kite_ltp_smoke.py  llm_smoke.py  migrate.py  project_neo4j_graph.py  replay_decision.py  restore_local.py  run_analysts.py  run_backtest.py  run_final_approval.py  run_paper_loop.py  run_paper_once.py  run_research_debate.py  run_risk_review.py  run_trader_proposal.py  seed_mock_data.py  sync_halal_stocks.py  sync_kite_instruments.py  taurus_smoke.py
(+139 files in other folders)
