[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taurus-agent"
version = "0.0.1"
description = "Observable, paper-trading-first algo trading MVP for Indian cash equities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "prometheus-client>=0.20,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.1,<26.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
]

[tool.setuptools.packages.find]
where = ["packages"]
include = ["taurus_core*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["packages", "."]
testpaths = ["tests"]
