[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taurus-agent"
version = "0.0.1"
description = "Observable, paper-trading-first algo trading MVP for Indian cash equities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "prometheus-client>=0.20,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "structlog>=24.1,<26.0",
    "uvicorn[standard]>=0.30,<1.0",
    "streamlit>=1.38,<2.0",
    "pandas>=2.2,<3.0",
    "kiteconnect>=5,<6",
    "pyyaml>=6,<7",
    "beautifulsoup4>=4,<5",
    "neo4j>=6,<7",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
]

[tool.setuptools.packages.find]
where = ["packages"]
include = ["taurus_core*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["packages", "."]
testpaths = ["tests"]
